# YTMediaTool

./: .gitignore  AboutPage.py  BasicPage.py  Common.py  Main.py  README.md  SMLD.py  SMLDpage.py  SMLDprogressTracker.py  Settings.py  SettingsPage.py  Version.py  build-installer.bat  build.bat  build.sh  pyproject.toml
PKGBUILD/: PKGBUILD  YTMediaTool.desktop
WindowsInstaller/: installer.py
YTMediaTool/: AboutPage.py  BasicPage.py  Common.py  CommonGui.py  Info.py  Main.py  SMLD.py  SMLDpage.py  SMLDprogressTracker.py  Settings.py  SettingsPage.py  Version.py  YTMediaTool.spec  YtdlpManager.py  __main__.py  webui_example.py  yttest.py
dev/: templatepage.py
